Index redesign page: fixes (html + css

--- a/app/index-redesign.html
+++ b/app/index-redesign.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500;600;700&family=Open+Sans:wght@700&family=Nunito:wght@400;500;700&family=Inter:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,700&family=Nunito:wght@400;500;700&family=Inter:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.min.css" />
@@ -20,7 +20,7 @@
         <div class="header__inner">
           <nav class="header__nav">
             <a class="header__logo" href="#">
-              <img src="images/logo-header-new.svg" alt="Ярдэмче лого" />
+              <img src="images/logo-header.svg" alt="Ярдэмче лого" />
             </a>
             <div class="menu__profile">
               <a href="#" class="menu__profile-link">
@@ -178,13 +178,13 @@
 
       <section class="info">
         <div class="container">
-          <h2 class="info__title subtitle">
+          <p class="info__text">
+            Когда женщина счастлива, счастлив весь весь мир.
+          </p>
+          <p class="info__descr subtitle">
             ЭНИ - проект созданный с заботой о женщине для того, чтобы облегчить
             и улучшить ее жизнь. Здесь вы найдете специалистов, услуги и товары,
             в которых нуждаетесь на данный момент.
-          </h2>
-          <p class="info__text">
-            Когда женщина счастлива, счастлив весь весь мир.
           </p>
 
           <div class="info__banner banner">
@@ -193,7 +193,7 @@
                 Центр помощи и развития для женщин Ильзиры Валиахметовой
               </h3>
               <p class="banner__text">
-                Также у нас есть фонды партнеры, которые помогут вам
+                Также у нас есть фонды-партнеры, которые помогут вам
                 безвозмездно
               </p>
               <a href="#" class="banner__more-link">
@@ -203,6 +203,7 @@
               ></a>
             </div>
           </div>
+          <h2 class="info__title subtitle">Наши направления</h2>
           <div class="info__inner">
             <a href="#">
               <div
@@ -238,7 +239,7 @@
           <ul class="description__packages-list">
             <li class="description__package-item">
               <div class="description__package-inner">
-                <p class="description__package-quantity">4 услуги</p>
+                <p class="description__package-quantity">2 услуги</p>
                 <div class="description__package-bottom">
                   <span class="description__package-price">3 000 ₽</span>
                   <a href="#" class="description__package-arrow">
