Index redesign page: changed text (html)

--- a/app/index-redesign.html
+++ b/app/index-redesign.html
@@ -288,11 +288,11 @@
               <div class="give__left">
                 <h6 class="give__item-title">Женщинам</h6>
                 <p class="give__item-text">
-                  Мы знаем как порой бывает сложно женщине, поэтому создали этот
-                  проект для того, чтобы стать опорой для Вас. Поможем сделать
-                  первые шаги, определить направление развития. Найти
-                  специалиста, услуги и товары в которых Вы нуждаетесь на данный
-                  момент.
+                  Мы знаем, как порой бывает женщине сложно. Эта ситуация
+                  натолкнула нас на мысль создать проект, который поможет
+                  сделать первые шаги, определить направление развития.
+                  <br />Подберем услуги специалистов, в&nbsp;которых
+                  Вы&nbsp;нуждаетесь на данный момент.
                 </p>
               </div>
               <div class="give__right">
